@@ -11,6 +11,7 @@ Version 0.3q
  - Equines win, ride stallion (requires pussy)
 * You can no longer become pregnant from lizard tails.
 * Fuckhuge terry pitch vaginal scene done. Like, huge. 16k words.
+* Jeanne can now craft some alchemy items that can change your gender.
 
 --------------------------------------------
              PREVIOUS VERSIONS
